Improvements: Ensure navigation bar consistency across all pages, add button-looking elements to contact page query cards

--- a/public/404.html
+++ b/public/404.html
@@ -155,6 +155,11 @@
   background: #2d6b31;
 }
 
+/* Ensure navigation is consistent across all pages */
+.main-navigation * {
+  box-sizing: border-box;
+}
+
 @media (max-width: 768px) {
   .nav-container {
     flex-direction: column;
@@ -167,6 +172,9 @@
 }
 
 
+/* Ensure navigation is consistent across all pages */
+
+/* Ensure navigation is consistent across all pages */
 
       /* CSS Reset for Cross-Browser Compatibility */
       *, *::before, *::after {
