--- a/public/index.html
+++ b/public/index.html
@@ -110,6 +110,11 @@
   background: #2d6b31;
 }
 
+/* Ensure navigation is consistent across all pages */
+.main-navigation * {
+  box-sizing: border-box;
+}
+
 @media (max-width: 768px) {
   .nav-container {
     flex-direction: column;
@@ -122,6 +127,7 @@
 }
 
 
+/* Ensure navigation is consistent across all pages */
 
         * {
             margin: 0;
