--- a/public/privacy.html
+++ b/public/privacy.html
@@ -105,6 +105,11 @@
   background: #2d6b31;
 }
 
+/* Ensure navigation is consistent across all pages */
+.main-navigation * {
+  box-sizing: border-box;
+}
+
 @media (max-width: 768px) {
   .nav-container {
     flex-direction: column;
@@ -117,6 +122,9 @@
 }
 
 
+/* Ensure navigation is consistent across all pages */
+
+/* Ensure navigation is consistent across all pages */
 
 .policy-content p {
             margin-bottom: 1rem;
