--- a/public/about.html
+++ b/public/about.html
@@ -292,6 +292,11 @@
   background: #2d6b31;
 }
 
+/* Ensure navigation is consistent across all pages */
+.main-navigation * {
+  box-sizing: border-box;
+}
+
 @media (max-width: 768px) {
   .nav-container {
     flex-direction: column;
@@ -304,6 +309,9 @@
 }
 
 
+/* Ensure navigation is consistent across all pages */
+
+/* Ensure navigation is consistent across all pages */
 
       /* CSS Reset for Cross-Browser Compatibility */
       *, *::before, *::after {
