--- a/public/faq.html
+++ b/public/faq.html
@@ -7,7 +7,6 @@
 
 
 
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -142,6 +141,11 @@
   background: #2d6b31;
 }
 
+/* Ensure navigation is consistent across all pages */
+.main-navigation * {
+  box-sizing: border-box;
+}
+
 @media (max-width: 768px) {
   .nav-container {
     flex-direction: column;
@@ -154,6 +158,9 @@
 }
 
 
+/* Ensure navigation is consistent across all pages */
+
+/* Ensure navigation is consistent across all pages */
 
       /* CSS Reset for Cross-Browser Compatibility */
       *, *::before, *::after {
