--- a/public/contact.html
+++ b/public/contact.html
@@ -159,12 +159,20 @@
 }
 
 .logo-text {
-  text-decoration: none;
+  text-decoration: none !important;
   display: flex;
   align-items: baseline;
   gap: 0;
   color: #333333;
   font-family: 'Montserrat', sans-serif;
+}
+
+.logo-text:hover {
+  text-decoration: none !important;
+}
+
+.logo-text:focus {
+  text-decoration: none !important;
 }
 
 .logo-segmentor {
@@ -220,6 +228,22 @@
   box-sizing: border-box;
 }
 
+/* Force consistent navigation styling - override any React app CSS */
+.main-navigation {
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+.nav-logo {
+  font-size: 1.5rem !important;
+  font-weight: 700 !important;
+}
+
+.nav-link {
+  font-size: 1rem !important;
+  font-weight: 500 !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+}
+
 @media (max-width: 768px) {
   .nav-container {
     flex-direction: column;
@@ -231,6 +255,18 @@
   }
 }
 
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
 
 /* Ensure navigation is consistent across all pages */
 
