--- a/public/brand-plus.html
+++ b/public/brand-plus.html
@@ -96,7 +96,7 @@
   color: #3a863e;
   text-transform: uppercase;
   font-size: 0.6em;
-  vertical-align: baseline;
+  transform: translateY(2px);
   display: inline-block;
   margin-left: 2px;
 }
@@ -161,6 +161,21 @@
   }
 }
 
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
 
 /* Ensure navigation is consistent across all pages */
 
