--- a/public/terms.html
+++ b/public/terms.html
@@ -80,7 +80,7 @@
   color: #3a863e;
   text-transform: uppercase;
   font-size: 0.6em;
-  vertical-align: baseline;
+  transform: translateY(2px);
   display: inline-block;
   margin-left: 2px;
 }
@@ -145,6 +145,21 @@
   }
 }
 
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
 
 /* Ensure navigation is consistent across all pages */
 
