--- a/public/about.html
+++ b/public/about.html
@@ -267,7 +267,7 @@
   color: #3a863e;
   text-transform: uppercase;
   font-size: 0.6em;
-  transform: translateY(2px);
+  vertical-align: baseline;
   display: inline-block;
   margin-left: 2px;
 }
@@ -332,6 +332,26 @@
   }
 }
 
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
 
 /* Ensure navigation is consistent across all pages */
 
