--- a/public/contact.html
+++ b/public/contact.html
@@ -190,9 +190,10 @@
   color: #3a863e;
   text-transform: uppercase;
   font-size: 0.6em;
-  vertical-align: baseline;
+  vertical-align: middle;
   display: inline-block;
   margin-left: 2px;
+  transform: translateY(-1px);
 }
 
 .nav-links {
@@ -255,6 +256,21 @@
   }
 }
 
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
 
 /* Ensure navigation is consistent across all pages */
 
