Deploy: FAQ updates with Getting Started, Customisation, and Troubleshooting sections

--- a/public/about.html
+++ b/public/about.html
@@ -396,6 +396,16 @@
 
 /* Ensure navigation is consistent across all pages */
 
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
 /* Ensure navigation is consistent across all pages */
 
 /* Ensure navigation is consistent across all pages */
