--- a/public/brand-plus.html
+++ b/public/brand-plus.html
@@ -225,6 +225,16 @@
 
 /* Ensure navigation is consistent across all pages */
 
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
+
+/* Force consistent navigation styling - override any React app CSS */
+
+/* Ensure navigation is consistent across all pages */
+
 /* Ensure navigation is consistent across all pages */
 
 /* Ensure navigation is consistent across all pages */
