--- a/public/faq.html
+++ b/public/faq.html
@@ -183,83 +183,8 @@
 }
 
 
-/* Ensure navigation is consistent across all pages */
 
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-
-/* Force consistent navigation styling - override any React app CSS */
-
-/* Ensure navigation is consistent across all pages */
-
-/* Ensure navigation is consistent across all pages */
-
-/* Ensure navigation is consistent across all pages */
-
-      /* CSS Reset for Cross-Browser Compatibility */
+/* CSS Reset for Cross-Browser Compatibility */
       *, *::before, *::after {
         box-sizing: border-box;
         margin: 0;
@@ -1387,7 +1312,7 @@ CUST002,6,4,Jane Doe</pre>
                             <span class="faq-toggle">+</span>
                         </div>
                         <div class="faq-answer">
-                            <p>We were quoted £18,000 by domain speculators for the .com version, but we chose an .app domain for £6 and invested the difference in improving our service instead.</p>
+                            <p>We were quoted £18,000 by domain speculators for the .com version, but we chose an .app domain for £6 and focussed on improving our service instead.</p>
                             <p>The .app domain also clearly signals that Segmentor is an application—a tool you use, not just a website you visit. This aligns perfectly with our tool-first approach.</p>
                         </div>
                     </div>
