Remove Brand+ commercial model: Make features universal, convert to TM Agent access only

--- a/public/faq.html
+++ b/public/faq.html
@@ -966,39 +966,13 @@ CUST002,6,4,Jane Doe</pre>
                         Customisation & Branding
                     </h2>
                     
-                    <div class="faq-item" data-keywords="brand plus custom branding logo">
-                        <div class="faq-question" onclick="toggleFAQ(this)">
-                            <h3>What's included in Brand+?</h3>
-                            <span class="faq-toggle">+</span>
-                        </div>
-                        <div class="faq-answer">
-                            <p>Brand+ adds custom branding to your reports:</p>
-                            <ul>
-                                <li>Replace the watermark with your company logo</li>
-                                <li>Apply your brand colours to charts and reports</li>
-                                <li>Control logo size, position, and orientation</li>
-                            </ul>
-                            <p><a href="/brand-plus.html" style="color: #3a863e; text-decoration: none; font-weight: 600;">Learn more about Brand+ →</a></p>
-                        </div>
-                    </div>
-
-                    <div class="faq-item" data-keywords="enable brand plus activate branding upgrade">
-                        <div class="faq-question" onclick="toggleFAQ(this)">
-                            <h3>How do I enable Brand+ features?</h3>
-                            <span class="faq-toggle">+</span>
-                        </div>
-                        <div class="faq-answer">
-                            <p>Brand+ features are available through our upgrade programme. Visit the Brand+ page to learn more about pricing and how to enable custom branding for your reports.</p>
-                        </div>
-                    </div>
-
                     <div class="faq-item" data-keywords="custom logo upload logo company logo">
                         <div class="faq-question" onclick="toggleFAQ(this)">
                             <h3>Can I use my own logo in reports?</h3>
                             <span class="faq-toggle">+</span>
                         </div>
                         <div class="faq-answer">
-                            <p>Yes, with Brand+. You can upload your company logo via URL or select from predefined partner logos. The logo will replace the default watermark in all exported reports and charts.</p>
+                            <p>Yes! You can customize the watermark in your reports. Go to Controls > Watermark > Watermark Controls to adjust logo settings, size, position, and transparency. All customization features are free.</p>
                         </div>
                     </div>
 
@@ -1008,32 +982,7 @@ CUST002,6,4,Jane Doe</pre>
                             <span class="faq-toggle">+</span>
                         </div>
                         <div class="faq-answer">
-                            <p>Yes, with Brand+. You can apply your organisation's colour palette to charts and reports, ensuring brand consistency across all your exported materials.</p>
-                        </div>
-                    </div>
-
-                    <div class="faq-item" data-keywords="free vs brand plus feature comparison what's included">
-                        <div class="faq-question" onclick="toggleFAQ(this)">
-                            <h3>What's the difference between free and Brand+?</h3>
-                            <span class="faq-toggle">+</span>
-                        </div>
-                        <div class="faq-answer">
-                            <p>All core segmentation and analysis features are free. Brand+ adds visual customisation:</p>
-                            <ul>
-                                <li><strong>Free:</strong> Full access to segmentation, analysis, reports, and exports</li>
-                                <li><strong>Brand+:</strong> Everything in free, plus custom logos and brand colours in exports</li>
-                            </ul>
-                            <p>The functionality is identical—Brand+ is purely about visual branding.</p>
-                        </div>
-                    </div>
-
-                    <div class="faq-item" data-keywords="try brand plus test branding preview">
-                        <div class="faq-question" onclick="toggleFAQ(this)">
-                            <h3>Can I try Brand+ before upgrading?</h3>
-                            <span class="faq-toggle">+</span>
-                        </div>
-                        <div class="faq-answer">
-                            <p>Yes! Demo mode includes Brand+ features so you can see how custom branding looks in your reports before upgrading. <a href="/tool/?demo=true" style="color: #3a863e; text-decoration: none; font-weight: 600;">Launch Demo →</a></p>
+                            <p>Yes! You can customize colors throughout the tool. Highlight KPIs with different colors, customize bar chart colors, and more. All color customization features are free.</p>
                         </div>
                     </div>
                 </div>
