--- a/public/brand-plus-auth.html
+++ b/public/brand-plus-auth.html
@@ -1,6 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<style>
+/* Font Face Declarations - Using Local Fonts */
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/fonts/Montserrat-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Jaro';
+  src: url('/fonts/Jaro-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+.main-navigation {
+  background: #fff;
+  border-bottom: 1px solid #e5e7eb;
+  padding: 1rem 0;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.nav-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+}
+
+.nav-logo {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.logo-text {
+  text-decoration: none !important;
+  display: flex;
+  align-items: baseline;
+  gap: 0;
+  color: #333333;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.logo-text:hover {
+  text-decoration: none !important;
+}
+
+.logo-text:focus {
+  text-decoration: none !important;
+}
+
+.logo-segmentor {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  color: #333333;
+}
+
+.logo-m {
+  color: #3a863e;
+}
+
+.logo-app {
+  font-family: 'Jaro', sans-serif;
+  color: #3a863e;
+  text-transform: uppercase;
+  font-size: 0.6em;
+  vertical-align: middle;
+  display: inline-block;
+  margin-left: 2px;
+  transform: translateY(-1px);
+}
+
+.nav-links {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: #374151;
+  font-weight: 500;
+  transition: color 0.2s;
+}
+
+.nav-link:hover {
+  color: #3a863e;
+}
+
+.nav-link-primary {
+  background: #3a863e;
+  color: white !important;
+  padding: 0.5rem 1rem;
+  border-radius: 0.375rem;
+}
+
+.nav-link-primary:hover {
+  background: #2d6b31;
+}
+
+/* Ensure navigation is consistent across all pages */
+.main-navigation * {
+  box-sizing: border-box;
+}
+
+/* Force consistent navigation styling - override any React app CSS */
+.main-navigation {
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+.nav-logo {
+  font-size: 1.5rem !important;
+  font-weight: 700 !important;
+}
+
+.nav-link {
+  font-size: 1rem !important;
+  font-weight: 500 !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+}
+
+@media (max-width: 768px) {
+  .nav-container {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  .nav-links {
+    gap: 1rem;
+  }
+}
+</style>
+<link rel="preload" href="/fonts/Montserrat-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+<link rel="preload" href="/fonts/Jaro-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting... - segmentor.app</title>
@@ -11,6 +153,23 @@
     </script>
 </head>
 <body>
+
+<nav class="main-navigation">
+  <div class="nav-container">
+    <div class="nav-logo">
+      <a href="/" class="logo-text">
+        <span class="logo-segmentor">seg<span class="logo-m">m</span>entor</span><span class="logo-app">.APP</span>
+      </a>
+    </div>
+    <div class="nav-links">
+      <a href="/about.html" class="nav-link">About</a>
+      <a href="/faq.html" class="nav-link">FAQ</a>
+      <a href="/contact.html" class="nav-link">Contact</a>
+      <a href="/tool/" class="nav-link nav-link-primary">Use Tool</a>
+    </div>
+  </div>
+</nav>
+
     <div style="display: flex; justify-content: center; align-items: center; min-height: 100vh; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;">
         <div style="text-align: center;">
             <p>Redirecting...</p>
