Fix: Hide login button, change agents to staff, update redirects to /tm, add bespoke reports to contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -356,8 +356,9 @@
                             </svg>
                         </div>
                         <h3>CX & EX Programme Discussion</h3>
-                        <p>Ready to take your Customer Experience (CX) and Employee Experience (EX) to the next level? Request assistance from the best experts we partner with to transform insights into action.</p>
+                        <p>Ready to take your Customer Experience (CX) and Employee Experience (EX) to the next level? Work with Teresa Monroe's experts to create bespoke segmentor reports and transform insights into action.</p>
                         <ul>
+                            <li>Bespoke segmentor reports created by experts</li>
                             <li>CX & EX Programme overview</li>
                             <li>Expert consulting services</li>
                             <li>Implementation support</li>
@@ -438,6 +439,7 @@
                 <nav class="footer-nav">
                     <a href="/privacy.html">Privacy Policy</a>
                     <a href="/terms.html">Terms of Service</a>
+                    <a href="/tm" style="font-size: 0.85rem; opacity: 0.7;">TM Staff</a>
                 </nav>
             </div>
         </div>
