Update contact page: change 'tool' to 'segmentor' in user-facing text

--- a/public/contact.html
+++ b/public/contact.html
@@ -335,8 +335,8 @@
                                 <path d="m2 13 6 6"/>
                             </svg>
                         </div>
-                        <h3>Tool-Related Help Requests</h3>
-                        <p>Need assistance using segmentor.app? Have questions about features, data import, or troubleshooting? We're here to help you get the most out of the tool.</p>
+                        <h3>Segmentor-Related Help Requests</h3>
+                        <p>Need assistance using segmentor.app? Have questions about features, data import, or troubleshooting? We're here to help you get the most out of segmentor.</p>
                         <ul>
                             <li>Feature questions and guidance</li>
                             <li>Data import and export help</li>
