Update navigation: Change 'Use Tool' to 'Start segmentor' for better UX and TopTasks alignment

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -236,7 +236,7 @@ body {
       <a href="/about.html" class="nav-link">About</a>
       <a href="/faq.html" class="nav-link">FAQ</a>
       <a href="/contact.html" class="nav-link">Contact</a>
-      <a href="/tool/" class="nav-link nav-link-primary">Use Tool</a>
+      <a href="/tool/" class="nav-link nav-link-primary">Start segmentor</a>
     </div>
   </div>
 </nav>
