--- a/public/tool/faq.html
+++ b/public/tool/faq.html
@@ -173,7 +173,7 @@
                     <a href="/about.html">About</a>
                     <a href="/faq.html" class="active">FAQ</a>
                     <a href="/contact.html">Contact</a>
-                    <a href="/" class="cta-button">Use Tool</a>
+                    <a href="/" class="cta-button">Start segmentor</a>
                 </nav>
             </div>
         </div>
