Shorten navigation button: Change 'Start segmentor' to 'Start' for better consistency and scannability

--- a/public/contact.html
+++ b/public/contact.html
@@ -110,7 +110,7 @@
       <a href="/about.html" class="nav-link">About</a>
       <a href="/faq.html" class="nav-link">FAQ</a>
       <a href="/contact.html" class="nav-link">Contact</a>
-      <a href="/tool/" class="nav-link nav-link-primary">Start segmentor</a>
+      <a href="/tool/" class="nav-link nav-link-primary">Start</a>
     </div>
   </div>
 </nav>
