--- a/public/faq.html
+++ b/public/faq.html
@@ -36,7 +36,7 @@
       <a href="/about.html" class="nav-link">About</a>
       <a href="/faq.html" class="nav-link">FAQ</a>
       <a href="/contact.html" class="nav-link">Contact</a>
-      <a href="/tool/" class="nav-link nav-link-primary">Start segmentor</a>
+      <a href="/tool/" class="nav-link nav-link-primary">Start</a>
     </div>
   </div>
 </nav>
@@ -1273,7 +1273,7 @@ CUST002,6,4,Jane Doe</pre>
                     <h2 style="font-family: 'Montserrat', sans-serif;">Still Need Help?</h2>
                     <p>Can't find the answer you're looking for? We're here to help.</p>
                     <div class="help-actions">
-                        <a href="/" class="btn btn-primary">Start segmentor</a>
+                        <a href="/" class="btn btn-primary">Start</a>
                         <a href="/" class="btn btn-secondary">Try the Tool</a>
                     </div>
             </div>
