--- a/public/tool/about.html
+++ b/public/tool/about.html
@@ -227,7 +227,7 @@
                     <a href="/about.html" class="active">About</a>
                     <a href="/faq.html">FAQ</a>
                     <a href="/contact.html">Contact</a>
-                    <a href="/" class="cta-button">Start segmentor</a>
+                    <a href="/" class="cta-button">Start</a>
                 </nav>
             </div>
         </div>
