Fix footer: Remove inline styles from TM Staff link to match other footer links

--- a/public/contact.html
+++ b/public/contact.html
@@ -439,7 +439,7 @@
                 <nav class="footer-nav">
                     <a href="/privacy.html">Privacy Policy</a>
                     <a href="/terms.html">Terms of Service</a>
-                    <a href="/tm" style="font-size: 0.85rem; opacity: 0.7;">TM Staff</a>
+                    <a href="/tm">TM Staff</a>
                 </nav>
             </div>
         </div>
